ANTLR/T2Parser.cs
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 T2.g 2016-03-03 11:35:51

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

using Antlr.Runtime.Tree;

namespace  Gekko 
{
public partial class T2Parser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"ASTNEGATE", 
		"ASTSTAR", 
		"ASTSTARS", 
		"ASTIDENT", 
		"ASTPLUS", 
		"ASTMINUS", 
		"ASTADD", 
		"ASTMULTIPLY", 
		"ASTCOMMAND", 
		"ASTCOMMAND1", 
		"ASTCOMMAND2", 
		"ASTCOMMAND3", 
		"ASTCOMPARECOMMAND", 
		"ASTSERIES", 
		"ASTPAREN", 
		"ASTANGLE", 
		"ASTBRACKET", 
		"ASTCURLY", 
		"ASTLIST", 
		"FIX", 
		"GENR", 
		"LIST", 
		"SKIP", 
		"UPD", 
		"TIME", 
		"AST1", 
		"COMMENT", 
		"EOL", 
		"SEMICOLON", 
		"WHITESPACE", 
		"LEFTANGLE", 
		"RIGHTANGLE", 
		"LEFTPAREN", 
		"RIGHTPAREN", 
		"LEFTBRACKET", 
		"RIGHTBRACKET", 
		"LEFTCURLY", 
		"RIGHTCURLY", 
		"StringInQuotes", 
		"StringInQuotes2", 
		"Integer", 
		"Double", 
		"DigitsEDigits", 
		"DateDef", 
		"IdentStartingWithInt", 
		"Ident", 
		"TILDE", 
		"AND", 
		"AT", 
		"HAT", 
		"COLON", 
		"DOT", 
		"HASH", 
		"PERCENT", 
		"DOLLAR", 
		"STAR", 
		"STARS", 
		"VERTICALBAR", 
		"PLUS", 
		"MINUS", 
		"DIV", 
		"EQUAL", 
		"BACKSLASH", 
		"QUESTION", 
		"COMMA", 
		"ANYTHING", 
		"NEWLINE2", 
		"NEWLINE3", 
		"DIGIT", 
		"LETTER", 
		"E_", 
		"Exponent", 
		"A_", 
		"Q_", 
		"M_", 
		"B_", 
		"C_", 
		"D_", 
		"F_", 
		"G_", 
		"H_", 
		"I_", 
		"J_", 
		"K_", 
		"L_", 
		"N_", 
		"O_", 
		"P_", 
		"R_", 
		"S_", 
		"T_", 
		"U_", 
		"V_", 
		"W_", 
		"X_", 
		"Y_", 
		"Z_"
    };

    public const int D_ = 81;
    public const int FIX = 23;
    public const int STAR = 59;
    public const int LETTER = 73;
    public const int ASTMINUS = 9;
    public const int ASTPAREN = 18;
    public const int U_ = 95;
    public const int EOF = -1;
    public const int L_ = 88;
    public const int ASTNEGATE = 4;
    public const int UPD = 27;
    public const int HAT = 53;
    public const int E_ = 74;
    public const int LEFTPAREN = 36;
    public const int EOL = 31;
    public const int VERTICALBAR = 61;
    public const int LEFTCURLY = 40;
    public const int RIGHTCURLY = 41;
    public const int T_ = 94;
    public const int COMMENT = 30;
    public const int M_ = 78;
    public const int Double = 45;
    public const int ASTSTARS = 6;
    public const int F_ = 82;
    public const int ASTCOMPARECOMMAND = 16;
    public const int ASTLIST = 22;
    public const int ASTADD = 10;
    public const int NEWLINE2 = 70;
    public const int NEWLINE3 = 71;
    public const int RIGHTBRACKET = 39;
    public const int WHITESPACE = 33;
    public const int W_ = 97;
    public const int SEMICOLON = 32;
    public const int LIST = 25;
    public const int SKIP = 26;
    public const int N_ = 89;
    public const int ASTSERIES = 17;
    public const int G_ = 83;
    public const int Ident = 49;
    public const int ASTBRACKET = 20;
    public const int DigitsEDigits = 46;
    public const int V_ = 96;
    public const int StringInQuotes = 42;
    public const int ASTCURLY = 21;
    public const int ASTANGLE = 19;
    public const int O_ = 90;
    public const int LEFTBRACKET = 38;
    public const int BACKSLASH = 66;
    public const int DOLLAR = 58;
    public const int LEFTANGLE = 34;
    public const int Y_ = 99;
    public const int AST1 = 29;
    public const int GENR = 24;
    public const int DateDef = 47;
    public const int Exponent = 75;
    public const int H_ = 84;
    public const int AND = 51;
    public const int Q_ = 77;
    public const int AT = 52;
    public const int X_ = 98;
    public const int TIME = 28;
    public const int COMMA = 68;
    public const int IdentStartingWithInt = 48;
    public const int EQUAL = 65;
    public const int A_ = 76;
    public const int TILDE = 50;
    public const int PLUS = 62;
    public const int DIGIT = 72;
    public const int I_ = 85;
    public const int ASTCOMMAND2 = 14;
    public const int DOT = 55;
    public const int ASTCOMMAND1 = 13;
    public const int P_ = 91;
    public const int ASTCOMMAND3 = 15;
    public const int ASTMULTIPLY = 11;
    public const int PERCENT = 57;
    public const int ASTCOMMAND = 12;
    public const int B_ = 79;
    public const int HASH = 56;
    public const int J_ = 86;
    public const int ASTPLUS = 8;
    public const int MINUS = 63;
    public const int ANYTHING = 69;
    public const int S_ = 93;
    public const int COLON = 54;
    public const int QUESTION = 67;
    public const int Z_ = 100;
    public const int RIGHTPAREN = 37;
    public const int StringInQuotes2 = 43;
    public const int C_ = 80;
    public const int ASTSTAR = 5;
    public const int STARS = 60;
    public const int K_ = 87;
    public const int RIGHTANGLE = 35;
    public const int DIV = 64;
    public const int ASTIDENT = 7;
    public const int Integer = 44;
    public const int R_ = 92;

    // delegates
    // delegators



        public T2Parser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public T2Parser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();
            this.state.ruleMemo = new Hashtable[99+1];
             
             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return T2Parser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "T2.g"; }
    }



                                     private CommonToken token(string text, int type, int line) {
                                                                   CommonToken t = new CommonToken(type, text);
                                                               t.Line = line;
                                                                   return t;
                                                                }
                                      private System.Collections.Generic.List<string> errors = new System.Collections.Generic.List<string>();
                                      private System.Collections.Generic.List<string> prtItems = new System.Collections.Generic.List<string>();
                                      public override void DisplayRecognitionError(string[] tokenNames,
                                                                          RecognitionException e) {
                                          string hdr = GetErrorHeader(e);
                                          string msg = GetErrorMessage(e, tokenNames);
                                          errors.Add(e.Line + "¤" + e.CharPositionInLine + "¤" + hdr + "¤" + msg);
                                      }
                                      public System.Collections.Generic.List<string> GetErrors() {
                                          return errors;
                                      }


                                  

    public class expr_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr"
    // T2.g:150:1: expr : ( expr2 )* ( n )? EOF ;
    public T2Parser.expr_return expr() // throws RecognitionException [1]
    {   
        T2Parser.expr_return retval = new T2Parser.expr_return();
        retval.Start = input.LT(1);
        int expr_StartIndex = input.Index();
        object root_0 = null;

        IToken EOF3 = null;
        T2Parser.expr2_return expr21 = default(T2Parser.expr2_return);

        T2Parser.n_return n2 = default(T2Parser.n_return);


        object EOF3_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 1) ) 
    	    {
    	    	return retval; 
    	    }
            // T2.g:150:12: ( ( expr2 )* ( n )? EOF )
            // T2.g:150:14: ( expr2 )* ( n )? EOF
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// T2.g:150:14: ( expr2 )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == WHITESPACE) )
            	    {
            	        int LA1_1 = input.LA(2);

            	        if ( ((LA1_1 >= FIX && LA1_1 <= TIME) || (LA1_1 >= COMMENT && LA1_1 <= EOL) || LA1_1 == Ident) )
            	        {
            	            alt1 = 1;
            	        }


            	    }
            	    else if ( ((LA1_0 >= FIX && LA1_0 <= TIME) || (LA1_0 >= COMMENT && LA1_0 <= EOL) || LA1_0 == Ident) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // T2.g:0:0: expr2
            			    {
            			    	PushFollow(FOLLOW_expr2_in_expr417);
            			    	expr21 = expr2();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return retval;
            			    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, expr21.Tree);

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements

            	// T2.g:150:21: ( n )?
            	int alt2 = 2;
            	int LA2_0 = input.LA(1);

            	if ( (LA2_0 == WHITESPACE) )
            	{
            	    alt2 = 1;
            	}
            	switch (alt2) 
            	{
            	    case 1 :
            	        // T2.g:0:0: n
            	        {
            	        	PushFollow(FOLLOW_n_in_expr420);
            	        	n2 = n();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, n2.Tree);

            	        }
            	        break;

            	}

            	EOF3=(IToken)Match(input,EOF,FOLLOW_EOF_in_expr423); if (state.failed) return retval;
            	if ( state.backtracking == 0 )
            	{EOF3_tree = (object)adaptor.Create(EOF3);
            		adaptor.AddChild(root_0, EOF3_tree);
            	}

            }

            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 1, expr_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "expr"

    public class expr2_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr2"
    // T2.g:152:1: expr2 : ( command semi | ( n )? COMMENT ( n )? EOL | ( n )? EOL );
    public T2Parser.expr2_return expr2() // throws RecognitionException [1]
    {   
        T2Parser.expr2_return retval = new T2Parser.expr2_return();
        retval.Start = input.LT(1);
        int expr2_StartIndex = input.Index();
        object root_0 = null;

        IToken COMMENT7 = null;
        IToken EOL9 = null;
        IToken EOL11 = null;
        T2Parser.command_return command4 = default(T2Parser.command_return);

        T2Parser.semi_return semi5 = default(T2Parser.semi_return);

        T2Parser.n_return n6 = default(T2Parser.n_return);

        T2Parser.n_return n8 = default(T2Parser.n_return);

        T2Parser.n_return n10 = default(T2Parser.n_return);


        object COMMENT7_tree=null;
        object EOL9_tree=null;
        object EOL11_tree=null;

        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 2) ) 
    	    {
    	    	return retval; 
    	    }
            // T2.g:152:13: ( command semi | ( n )? COMMENT ( n )? EOL | ( n )? EOL )
            int alt6 = 3;
            switch ( input.LA(1) ) 
            {
            case WHITESPACE:
            	{
                switch ( input.LA(2) ) 
                {
                case EOL:
                	{
                    alt6 = 3;
                    }
                    break;
                case COMMENT:
                	{
                    alt6 = 2;
                    }
                    break;
                case FIX:
                case GENR:
                case LIST:
                case SKIP:
                case UPD:
                case TIME:
                case Ident:
                	{
                    alt6 = 1;
                    }
                    break;
                	default:
                	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
                	    NoViableAltException nvae_d6s1 =
                	        new NoViableAltException("", 6, 1, input);

                	    throw nvae_d6s1;
                }

                }
                break;
            case FIX:
            case GENR:
            case LIST:
            case SKIP:
            case UPD:
            case TIME:
            case Ident:
            	{
                alt6 = 1;
                }
                break;
            case COMMENT:
            	{
                alt6 = 2;
                }
                break;
            case EOL:
            	{
                alt6 = 3;
                }
                break;
            	default:
            	    if ( state.backtracking > 0 ) {state.failed = true; return retval;}
            	    NoViableAltException nvae_d6s0 =
            	        new NoViableAltException("", 6, 0, input);

            	    throw nvae_d6s0;
            }

            switch (alt6) 
            {
                case 1 :
                    // T2.g:152:15: command semi
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_command_in_expr2437);
                    	command4 = command();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, command4.Tree);
                    	PushFollow(FOLLOW_semi_in_expr2439);
                    	semi5 = semi();
                    	state.followingStackPointer--;
                    	if (state.failed) return retval;
                    	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, semi5.Tree);

                    }
                    break;
                case 2 :
                    // T2.g:153:11: ( n )? COMMENT ( n )? EOL
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	// T2.g:153:11: ( n )?
                    	int alt3 = 2;
                    	int LA3_0 = input.LA(1);

                    	if ( (LA3_0 == WHITESPACE) )
                    	{
                    	    alt3 = 1;
                    	}
                    	switch (alt3) 
                    	{
                    	    case 1 :
                    	        // T2.g:0:0: n
                    	        {
                    	        	PushFollow(FOLLOW_n_in_expr2466);
                    	        	n6 = n();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return retval;
                    	        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, n6.Tree);

                    	        }
                    	        break;

                    	}

                    	COMMENT7=(IToken)Match(input,COMMENT,FOLLOW_COMMENT_in_expr2469); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{COMMENT7_tree = (object)adaptor.Create(COMMENT7);
                    		adaptor.AddChild(root_0, COMMENT7_tree);
                    	}
                    	// T2.g:153:22: ( n )?
                    	int alt4 = 2;
                    	int LA4_0 = input.LA(1);

                    	if ( (LA4_0 == WHITESPACE) )
                    	{
                    	    alt4 = 1;
                    	}
                    	switch (alt4) 
                    	{
                    	    case 1 :
                    	        // T2.g:0:0: n
                    	        {
                    	        	PushFollow(FOLLOW_n_in_expr2471);
                    	        	n8 = n();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return retval;
                    	        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, n8.Tree);

                    	        }
                    	        break;

                    	}

                    	EOL9=(IToken)Match(input,EOL,FOLLOW_EOL_in_expr2474); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{EOL9_tree = (object)adaptor.Create(EOL9);
                    		adaptor.AddChild(root_0, EOL9_tree);
                    	}

                    }
                    break;
                case 3 :
                    // T2.g:154:11: ( n )? EOL
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	// T2.g:154:11: ( n )?
                    	int alt5 = 2;
                    	int LA5_0 = input.LA(1);

                    	if ( (LA5_0 == WHITESPACE) )
                    	{
                    	    alt5 = 1;
                    	}
                    	switch (alt5) 
                    	{
                    	    case 1 :
                    	        // T2.g:0:0: n
                    	        {
                    	        	PushFollow(FOLLOW_n_in_expr2486);
                    	        	n10 = n();
                    	        	state.followingStackPointer--;
                    	        	if (state.failed) return retval;
                    	        	if ( state.backtracking == 0 ) adaptor.AddChild(root_0, n10.Tree);

                    	        }
                    	        break;

                    	}

                    	EOL11=(IToken)Match(input,EOL,FOLLOW_EOL_in_expr2489); if (state.failed) return retval;
                    	if ( state.backtracking == 0 )
                    	{EOL11_tree = (object)adaptor.Create(EOL11);
                    		adaptor.AddChild(root_0, EOL11_tree);
                    	}

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            if ( (state.backtracking==0) )
            {	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);}
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
            if ( state.backtracking > 0 ) 
            {
            	Memoize(input, 2, expr2_StartIndex); 
            }
        }
        return retval;
    }
    // $ANTLR end "expr2"

    public class command_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "command"
    // T2.g:157:1: command : commandName ( commandOptions )? ( commandRest )? -> ^( ASTCOMMAND ^( ASTCOMMAND1 commandName ) ^( ASTCOMMAND2 ( commandOptions )? ) ^( ASTCOMMAND3 ( commandRest )? ) ) ;
    public T2Parser.command_return command() // throws RecognitionException [1]
    {   
        T2Parser.command_return retval = new T2Parser.command_return();
        retval.Start = input.LT(1);
        int command_StartIndex = input.Index();
        object root_0 = null;

        T2Parser.commandName_return commandName12 = default(T2Parser.commandName_return);

        T2Parser.commandOptions_return commandOptions13 = default(T2Parser.commandOptions_return);

        T2Parser.commandRest_return commandRest14 = default(T2Parser.commandRest_return);


        RewriteRuleSubtreeStream stream_commandOptions = new RewriteRuleSubtreeStream(adaptor,"rule commandOptions");
        RewriteRuleSubtreeStream stream_commandName = new RewriteRuleSubtreeStream(adaptor,"rule commandName");
        RewriteRuleSubtreeStream stream_commandRest = new RewriteRuleSubtreeStream(adaptor,"rule commandRest");
        try 
    	{
    	    if ( (state.backtracking > 0) && AlreadyParsedRule(input, 3) ) 
    	    {
    	    	return retval; 
    	    }
            // T2.g:157:27: ( commandName ( commandOptions )? ( commandRest )? -> ^( ASTCOMMAND ^( ASTCOMMAND1 commandName ) ^( ASTCOMMAND2 ( commandOptions )? ) ^( ASTCOMMAND3 ( commandRest )? ) ) )
            // T2.g:157:29: commandName ( commandOptions )? ( commandRest )?
            {
            	PushFollow(FOLLOW_commandName_in_command528);
            	commandName12 = commandName();
            	state.followingStackPointer--;
            	if (state.failed) return retval;
            	if ( (state.backtracking==0) ) stream_commandName.Add(commandName12.Tree);
            	// T2.g:157:41: ( commandOptions )?
            	int alt7 = 2;
            	alt7 = dfa7.Predict(input);
            	switch (alt7) 
            	{
            	    case 1 :
            	        // T2.g:0:0: commandOptions
            	        {
            	        	PushFollow(FOLLOW_commandOptions_in_command530);
            	        	commandOptions13 = commandOptions();
            	        	state.followingStackPointer--;
            	        	if (state.failed) return retval;
            	        	if ( (state.backtracking==0) ) stream_commandOptions.Add(commandOptions13.Tree);

            	        }
            	        break;

            	}

            	// T2.g:157:57: ( commandRest )?
            	int alt8 = 2;
            	switch ( input.LA(1) ) 
            	{
            	    case WHITESPACE:
            	    	{
            	        int LA8_1 = input.LA(2);

            	        if ( (synpred9_T2()) )
            	        {
            	            alt8 = 1;
            	        }
            	        }
            	        break;
            	    case FIX:
            	    case GENR:
            	    case LIST:
            	    case SKIP:
            	    case UPD:
            	    case TIME:
            	    case EOL:
            	    case LEFTANGLE:
            	    case RIGHTANGLE:
            	    case LEFTPAREN:
            	    case LEFTBRACKET:
            	    case LEFTCURLY:
            	    case StringInQuotes:
            	    case StringInQuotes2:
            	    case Integer:
            	    case Double:
            	    case DigitsEDigits:
            	    case DateDef:
            	    case IdentStartingWithInt:
            	    case Ident:
            	    case TILDE:
            	    case AND:
            	    case AT:
            	    case HAT:
            	    case COLON:
            	    case DOT:
            	    case HASH:
            	    case PERCENT:
            	    case DOLLAR:
            	    case STAR:
            	    case STARS:
            	    case VERTICALBAR:
            	    case PLUS:
            	    case MINUS:
            	    case DIV:
            	    case EQUAL:
            	    case BACKSLASH:
            	    case QUESTION:
            	    case COMMA:
            	    case ANYTHING:
            	    	{
            	        alt8 = 1;
            	        }
            	        break;
            	    case SEMICOLON:
            	    	{
            	        int LA8_3 = input.LA(2);

            	        if ( (synpred9_T2()) )
            	        {
            	            alt8 = 1;
            	        }
            	        }
            	        break;
            	}
